fixed searchbar alignment. added search icon. added hover functionality to form. finished project.

--- a/styles.css
+++ b/styles.css
@@ -96,15 +96,24 @@ header a {
     padding: 5px 8px 0 16px;
     border: 1px solid #dfe1e5;
     border-radius: 24px; 
-    box-shadow: 0 1px 6px rgba(32,33,36,.28);
     display: flex;
-    flex-direction: column;
     justify-content: start;
+    align-items: center;
+}
+
+div:hover #search-outline {
+    box-shadow: 0 1px 6px rgba(32,33,36,.28);
+}
+
+#search-icon img{
+    width: 20px;
+    height: 20px;
+    padding-right: 13px;
 }
 
 #searchbar {
-    flex-grow: 1;
     border: none;
+    flex-grow: 1;
 }   
 
 input[type="text"] {
@@ -117,7 +126,7 @@ input[type="text"] {
 input[type="submit"] {
     box-shadow: 0 1px 1px rgba(83, 72, 72, 0.1);
     background-color: #f8f9fa;  
-    border: 1px solid #dadce0;
+    border: 1px solid #f8f9fa;
     color: #202124;
     border-radius: 4px;
     height: 36px;
@@ -126,6 +135,11 @@ input[type="submit"] {
     margin: 11px 4px 11px 4px;
     font-family: arial, sans-serif;
     font-size: 14px;
+}
+
+input[type="submit"]:hover {
+    border: 1px solid #dadce0;
+    box-shadow: 0 1px 1px rgba(0,0,0,.1);
 }
 
 #searchbar:focus-visible {
